# dotfile-manager-pro

./: .gitignore  Makefile  PKGBUILD  README.md  cli.py  dotfiles.json  install.sh  pyproject.toml  requirements.txt  uninstall.sh
dotfiles/auto-scan/: .gitconfig  .zshrc  settings.json
dotfiles/bash/: .bashrc
src/: config_manager.py  dotfile.py  git_handler.py  paths.py  tui_app.py
src/core/: exceptions.py  known_apps.json  models.py  paths.py
src/interface/: cli.py  tui.py
src/services/: config_service.py  file_service.py  git_local.py  scanner.py
tests/: test_core.py
