[tool.poetry]
name = "dotfile-manager-pro"
version = "1.0.0"
description = "A sophisticated dotfile manager."
authors = ["SnakePilot10 <snakepilot10@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dotmanager = "dotmanager.cli:main"

[tool.configuration]
config_dir = "${XDG_CONFIG_HOME}/dotmanager"
data_dir = "${XDG_DATA_HOME}/dotmanager"
cache_dir = "${XDG_CACHE_HOME}/dotmanager"

[packages]
dotmanager]
include = ["dotmanager/**", "scripts/**"]
layout = "src"
